[project]
name = "fdi-pln-2609-p1"
version = "1.0.0"
description = "Agente autonomo de intercambio de recursos - PLN"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "pydantic>=2.0.0",
    "requests>=2.32.5",
    "ruff>=0.14.14",
    "uvicorn>=0.40.0",
]

[project.scripts]
fdi-pln-2609-p1 = "main:main"

[tool.hatch.build.targets.wheel]
include = ["*.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
